1.9/ingress/ingress-VH.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-virtual-hosting
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: eric.yeh
    http:
      paths:
      - path: /
        backend:
          serviceName: service-echo-bar
          servicePort: 80
  - host: yeh.eric
    http:
      paths:
      - path: /
        backend:
          serviceName: service-echo-foo
          servicePort: 80
